# leti-esoft-25-26-B1

./: .gitignore  CMakeLists.txt  main.cpp
ConsoleApp/: CMakeLists.txt  ConsoleApp.cpp
ConsoleApp/headers/views/: CreateNewVaccineTypeView.h  ListEmployeesByRoleView.h  MainView.h  RegisterEmployeeView.h  RegisterSNSUserView.h  RegisterVaccinationCenterView.h  RegisterVaccineView.h
ConsoleApp/sources/views/: CreateNewVaccineTypeView.cpp  ListEmployeesByRoleView.cpp  MainView.cpp  RegisterEmployeeView.cpp  RegisterSNSUserView.cpp  RegisterVaccinationCenterView.cpp  RegisterVaccineView.cpp
Core/: CMakeLists.txt
Core/headers/controllers/dto/: VaccinationCenterDTO.h
Core/headers/controllers/ui/: App.h  CreateNewVaccineTypeController.h  ListEmployeesByRoleController.h  RegisterEmployeeController.h  RegisterSNSUserController.h  RegisterVaccinationCenterController.h  RegisterVaccineController.h
Core/headers/domain/model/: CommunityMassVaccinationCenter.h  Employee.h  EmployeeContainer.h  Facility.h  FacilityType.h  HealthcareCenter.h  SNSUser.h  SNSUserContainer.h  Vaccine.h  VaccineContainer.h  VaccineTechnology.h  VaccineType.h  VaccineTypeContainer.h
Core/headers/domain/repositories/: RepositoryFactory.h  SNSUserRepository.h  VaccinationCenterRepository.h  VaccineTypeRepository.h
Core/headers/domain/services/: SNSUserService.h  VaccinationCenterService.h
Core/headers/infrastructure/memory/: MemoryRepositoryFactory.h  SNSUserMemoryRepository.h  VaccinationCenterMemoryRepository.h  VaccineTypeMemoryRepository.h
Core/sources/controllers/ui/: App.cpp  CreateNewVaccineTypeController.cpp  ListEmployeesByRoleController.cpp  RegisterEmployeeController.cpp  RegisterSNSUserController.cpp  RegisterSNSUserControllerRegisterSNSUserController.cpp  RegisterVaccinationCenterController.cpp  RegisterVaccineController.cpp
Core/sources/domain/model/: CommunityMassVaccinationCenter.cpp  Employee.cpp  EmployeeContainer.cpp  Faclity.cpp  SNSUser.cpp  SNSUserContainer.cpp  Vaccine.cpp  VaccineContainer.cpp  VaccineTechnology.cpp  VaccineType.cpp  VaccineTypeContainer.cpp
Core/sources/domain/services/: SNSUserService.cpp  VaccinationCenterService.cpp
Core/sources/infrastructure/memory/: MemoryRepositoryFactory.cpp  SNSUserMemoryRepository.cpp  VaccinationCenterMemoryRepository.cpp  VaccineTypeMemoryRepository.cpp
DGSConsoleApp/headers/views/: CreateNewVaccineTypeView.h
DGSCore/headers/controllers/ui/: App.h  CreateNewVaccineTypeController.h
DGSCore/headers/domain/model/: VaccineType.h
DGSCore/sources/domain/model/: VaccineType.cpp
docs/: TeamMembersAndTasks.md
docs/(templates)/: TeamMembersAndTasks.md
docs/Sprint1/system-documentation/global-artifacts/: analysis.md  glossary.md  suplementary-specification.md  use-case-diagram.md
docs/Sprint1/system-documentation/global-artifacts/puml/: DM.puml  First draft UCD.puml  UCD.puml
docs/Sprint1/system-documentation/system-documentation/global-artifacts/: use-case-diagram.md
docs/Sprint1/system-documentation/system-documentation/global-artifacts/puml/: DM.puml
docs/Sprint2/US10/: US10.md
docs/Sprint2/US10/puml/: US10 - CD.puml  US10 - MD.puml  US10 - SD.puml  US10 - SSD.puml  US10-CD.puml  US10-MD.puml  US10-SD.puml  US10-SSD.puml
docs/Sprint2/US11/: US11.md
docs/Sprint2/US11/puml/: US11-CD.puml  US11-MD.puml  US11-SD.puml
docs/Sprint2/US14/: US14.md
docs/Sprint2/US14/puml/: US14-CD.puml  US14-MD.puml  US14-SD.puml  US14-SSD.puml
docs/Sprint2/US15/: US15.md
docs/Sprint2/US15/puml/: US15-CD.puml  US15-MD.puml  US15-SD.puml  US15-SSD.puml
docs/Sprint2/system-documentation/global-artifacts/: analysis.md  glossary.md  use-case-diagram.md
docs/Sprint2/system-documentation/global-artifacts/puml/: DM.puml
docs/system-documentation/US10/puml/: US10-MD.puml  US10-SD.puml
docs/system-documentation/US11/puml/: US11-CD.puml  US11-SSD.puml
docs/system-documentation/US12/: US12.md
docs/system-documentation/US12/puml/: US12-CD.puml  US12-MD.puml  US12-SD.puml  US12-SSD.puml
docs/system-documentation/US13/: US13.md
docs/system-documentation/US13/puml/: US13-CD.puml  US13-MD.puml  US13-SD.puml  US13-SSD.puml
docs/system-documentation/US14/puml/: US14-MD.puml  US14-SSD.puml
docs/system-documentation/US15/puml/: US15-CD.puml  US15-MD.puml  US15-SD.puml
docs/system-documentation/US20/: US20.md
docs/system-documentation/US20/puml/: US20-CD.puml  US20-MD.puml  US20-SD.puml  US20-SSD.puml
docs/system-documentation/US30/: US30.md
docs/system-documentation/US30/puml/: US30-CD.puml  US30-MD.puml  US30-SD.puml  US30-SSD.puml
docs/system-documentation/US41/: US41.md
docs/system-documentation/US41/puml/: US41-CD.puml  US41-MD.puml  US41-SD.puml  US41-SSD.puml
docs/system-documentation/global-artifacts/: README.md  analysis.md  glossary.md  use-case-diagram.md
docs/system-documentation/global-artifacts/puml/: DM.puml  UCD.puml
